welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:20: error: ')' expected but 'for' found.
    for(j<-1 to getMondeHauteur()-1){
    ^